--- a/src/classes/Class1.cls
+++ b/src/classes/Class1.cls
@@ -1,14 +1,4 @@
-//test
-//test1
-//test2
-//test4
-//test7
-//test 8
-//test 9
-//test 10
-//test 11
-//test 12
-//test 13
+//new test
 public with sharing class Class1 {
 
  public Class1(){  
