--- a/src/classes/Class1.cls
+++ b/src/classes/Class1.cls
@@ -3,6 +3,7 @@
 //test2
 //test 3
 //This is my change for demo
+//This is my new change for JIRA 0001
 public with sharing class Class1 {
 
  public Class1(){  
