--- a/src/classes/Class1.cls
+++ b/src/classes/Class1.cls
@@ -5,6 +5,7 @@
 //This is my change for demo
 //This is my new change for JIRA 0001
 //This is my change for JIRA 002
+//This is my change for Loyalty JIRA 001
 public with sharing class Class1 {
 
  public Class1(){  
