This is my commit for JIRA 0001 and 0002'

--- a/src/classes/Class1.cls
+++ b/src/classes/Class1.cls
@@ -1,11 +1,4 @@
-//new tes
-//test1
-//test2
-//test 3
-//This is my change for demo
-//This is my new change for JIRA 0001
-//This is my change for JIRA 002
-//This is my change for Loyalty JIRA 001
+//This is my first commit for loyalty JIRA 001
 public with sharing class Class1 {
 
  public Class1(){  
