--- a/src/classes/Class1.cls
+++ b/src/classes/Class1.cls
@@ -1,5 +1,7 @@
 //This is my first commit for loyalty JIRA 001
 //This is my next commit
+//This is my commit for JIRA 003 for Loyalty
+
 public with sharing class Class1 {
 
  public Class1(){  
