--- a/src/classes/Class1.cls
+++ b/src/classes/Class1.cls
@@ -2,6 +2,7 @@
 //This is my next commit
 //This is my commit for JIRA 003 for Loyalty
 //Commit for Loyalty JIRa 004
+//thisis a change
 public with sharing class Class1 {
 
  public Class1(){  
